--- a/html/controls/operator.html
+++ b/html/controls/operator.html
@@ -759,7 +759,11 @@ function createTeamsContent() {
   var selectTeam = _crgUtils.setupSelect("<select>", {
     optionParent: "Teams",
     optionChildName: "Team",
-    firstOption: { text: "No Team Selected", value: "" }
+    prependOptions: [
+      { text: "No Team Selected", value: "" },
+      { text: "Current Team 1", value: "(Current Team 1)" },
+      { text: "Current Team 2", value: "(Current Team 2)" }
+    ]
   }).appendTo("#Teams table.Selection td:eq(0)");
   var newTeamName = $("<input type='text' size='30'/>")
     .appendTo("#Teams table.Selection td:eq(1)");
@@ -775,6 +779,11 @@ function createTeamsContent() {
     $sb("Teams.Team("+teamid+").Name").$sbSet(teamname);
     newTeamName.val("").keyup().focus();
   });
+
+  createNewTeamTable($sb("ScoreBoard.Team(1)"), "(Current Team 1)")
+    .appendTo("#Teams>tbody>tr.Team>td");
+  createNewTeamTable($sb("ScoreBoard.Team(2)"), "(Current Team 2)")
+    .appendTo("#Teams>tbody>tr.Team>td");
 
   _crgUtils.bindAddRemoveEach($sb("Teams"), "Team", function(event, node) {
     createNewTeamTable(node).appendTo("#Teams>tbody>tr.Team>td");
@@ -793,8 +802,10 @@ function createTeamsContent() {
   });
 }
 
-function createNewTeamTable(team) {
-  var teamid = team.$sbId;
+function createNewTeamTable(team, teamid) {
+  if (!teamid)
+    teamid = team.$sbId;
+  var isCurrentTeam = team.parent().is("ScoreBoard");
   var teamTable = $("<table>").addClass("Team Hide").data("id", teamid)
     .append($("<tr><td/></tr>").addClass("Control"))
     .append($("<tr><td/></tr>").addClass("Skaters"));
@@ -809,29 +820,33 @@ function createNewTeamTable(team) {
     optionValueElement: "Src",
     firstOption: { text: "No Logo", value: "" }
   } }).appendTo(controlTable.find("td:eq(1)"));
-  $("<button>").text("Assign Team").button()
+  $("<button>").text("Assign Team").button({ disabled: isCurrentTeam })
     .click(function() { createTeamsAssignDialog(teamid); })
     .appendTo(controlTable.find("td:eq(2)"));
-  $("<button>").text("Remove Team").button()
+  $("<button>").text("Remove Team").button({ disabled: isCurrentTeam })
     .click(function() { createTeamsRemoveDialog(teamid); })
     .appendTo(controlTable.find("td:eq(3)"));
 
-  var skatersTable = $("<table>").appendTo(teamTable.find("tr.Skaters>td")).addClass("Skaters Empty")
-    .append($("<col>").addClass("Name"))
-    .append($("<col>").addClass("Number"))
-    .append($("<col>").addClass("Button"))
-    .append($("<thead>")
-      .append($("<tr>").append("<th colspan='3'><a>Skaters</a></th>"))
-      .append($("<tr>").append("<th><a>Name</a></th><th><a>Number</a></th><th><a>Add</a></th>"))
-      .append($("<tr>").append("<th/><th/><th/>").addClass("AddSkater")));
-//      .append($("<tr>").append("<th><a>Name</a></th><th><a>Number</a></th><th><a>Remove</a></th>")));
+  var skatersTable = $("<table>").addClass("Skaters Empty")
+    .appendTo(teamTable.find("tr.Skaters>td"))
+    .append("<col class='Id'>")
+    .append("<col class='Name'>")
+    .append("<col class='Number'>")
+    .append("<col class='Button'>")
+    .append("<thead/><tbody/>")
+    .children("thead")
+    .append("<tr><th colspan='4' class='Title'>Skaters</th></tr>")
+    .append("<tr><th>Id</th><th>Name</th><th>Number</th><th>Add</th>")
+    .append("<tr class='AddSkater'><th/><th/><th/><th/></tr>")
+    .append("<tr><th colspan='4'><hr/></th></tr>")
+    .end();
 
-  var newSkaterName = $("<input type='text' size='30'>").addClass("Name")
-    .appendTo(skatersTable.find("tr.AddSkater>th:eq(0)"));
-  var newSkaterNumber = $("<input type='text' size='10'>").addClass("Number")
+  var newSkaterName = $("<input type='text' size='20'>").addClass("Name")
     .appendTo(skatersTable.find("tr.AddSkater>th:eq(1)"));
+  var newSkaterNumber = $("<input type='text' size='20'>").addClass("Number")
+    .appendTo(skatersTable.find("tr.AddSkater>th:eq(2)"));
   $("<button>").text("Add Skater").button().addClass("AddSkater")
-    .appendTo(skatersTable.find("tr.AddSkater>th:eq(2)"))
+    .appendTo(skatersTable.find("tr.AddSkater>th:eq(3)"))
     .click(function() {
       var id = _crgUtils.checkSbId(newSkaterName.val());
       team.$sb("Skater("+id+").Name").$sbSet(newSkaterName.val());
@@ -845,15 +860,23 @@ function createNewTeamTable(team) {
     var skaterid = node.$sbId;
     if (skatersTable.find("tr[data-skaterid='"+skaterid+"']").length)
       return;
-    var skaterRow = $("<tr>").attr("data-skaterid", skaterid).appendTo(skatersTable);
-    node.$sb("Name").$sbControl("<input type='text' size='20'>")
-      .appendTo($("<td>").appendTo(skaterRow));
-    node.$sb("Number").$sbControl("<input type='text' size='20'>")
-      .appendTo($("<td>").appendTo(skaterRow));
-    $("<button>").text("Remove").addClass("RemoveSkater").button()
-      .click(function() { createTeamsSkaterRemoveDialog(teamid, skaterid); })
-      .appendTo($("<td>").appendTo(skaterRow));
     skatersTable.removeClass("Empty");
+
+    var skaterRow = $("<tr>").attr("data-skaterid", skaterid)
+      .append("<td class='Id'>")
+      .append("<td class='Name'>")
+      .append("<td class='Number'>")
+      .append("<td class='Remove'>");
+    $("<a>").text(skaterid).appendTo(skaterRow.children("td.Id"));
+    node.$sb("Name").$sbControl("<input type='text' size='20'>")
+      .appendTo(skaterRow.children("td.Name"));
+    node.$sb("Number").$sbControl("<input type='text' size='20'>")
+      .appendTo(skaterRow.children("td.Number"));
+    $("<button>").text("Remove").addClass("RemoveSkater").button()
+      .click(function() { createTeamsSkaterRemoveDialog(team, teamid, node); })
+      .appendTo(skaterRow.children("td.Remove"));
+
+    _windowFunctions.appendAlphaNumSortedByAttr(skatersTable.children("tbody"), skaterRow, "data-skaterid");
   }, function(event,node) {
     skatersTable.find("tr[data-skaterid='"+node.$sbId+"']").remove();
     if (!skatersTable.find("tr[data-skaterid]").length)
@@ -906,47 +929,62 @@ function createTeamsAssignDialog(teamId) {
 
 function createTeamsRemoveDialog(teamId) {
   var dialog = $("<div>").addClass("TeamsRemoveDialog");
-  $("<h2>").text("Remove Team: "+teamId).appendTo(dialog);
+
+  $("<a>").addClass("Remove").text("Remove Entire Team: ").appendTo(dialog);
+  $("<a>").addClass("Target").text(teamId).appendTo(dialog);
+  $("<br>").appendTo(dialog);
+
+  $("<hr>").appendTo(dialog);
   $("<a>").addClass("AreYouSure").text("Are you sure?").appendTo(dialog);
   $("<br>").appendTo(dialog);
-  $("<button>").addClass("Yes").text("Yes, remove!").appendTo(dialog).click(function() {
-    $sb("Teams.Team("+teamId+")").$sbRemove();
+
+  $("<button>").addClass("No").text("No, keep this team.").appendTo(dialog).click(function() {
     dialog.dialog("destroy").remove();
   }).button();
-  $("<button>").addClass("No").text("No, keep this team.").appendTo(dialog).click(function() {
+  $("<button>").addClass("Yes").text("Yes, remove!").appendTo(dialog).click(function() {
+    $sb("Teams.Team("+teamId+")").$sbRemove();
     dialog.dialog("destroy").remove();
   }).button();
 
   dialog.dialog({
     title: "Remove Team",
     modal: true,
-    width: "500px",
-    buttons: { Close: function() { $(this).dialog("destroy").remove(); } }
+    width: "700px"
   });
 }
 
-function createTeamsSkaterRemoveDialog(teamId, skaterId) {
-  var teamName = $sb("Teams.Team("+teamId+").Name").$sbGet();
+function createTeamsSkaterRemoveDialog(team, teamId, skater) {
   var dialog = $("<div>").addClass("TeamsRemoveDialog");
-  $("<h4>").text("Team '"+teamId+"'").appendTo(dialog);
-  if (teamId != teamName)
-    dialog.find("h4").text("Team Id: '"+teamId+"' Name: '"+teamName+"'");
-  $("<h2>").text("Remove Skater: "+skaterId).appendTo(dialog);
+
+  $("<a>").addClass("Title").text("Team: "+teamId).appendTo(dialog);
+  $("<br>").appendTo(dialog);
+
+  var skaterId = skater.$sbId;
+  var skaterName = skater.$sb("Name").$sbGet();
+  $("<a>").addClass("Remove").text("Remove Skater: ").appendTo(dialog);
+  $("<a>").addClass("Target").text(skaterId).appendTo(dialog);
+  $("<br>").appendTo(dialog);
+  if (skaterId != skaterName) {
+    $("<a>").addClass("Name").text("(Skater Name: "+skaterName+")").appendTo(dialog);
+    $("<br>").appendTo(dialog);
+  }
+
+  $("<hr>").appendTo(dialog);
   $("<a>").addClass("AreYouSure").text("Are you sure?").appendTo(dialog);
   $("<br>").appendTo(dialog);
-  $("<button>").addClass("Yes").text("Yes, remove!").appendTo(dialog).click(function() {
-    $sb("Teams.Team("+teamId+").Skater("+skaterId+")").$sbRemove();
+
+  $("<button>").addClass("No").text("No, keep this skater.").appendTo(dialog).click(function() {
     dialog.dialog("destroy").remove();
   }).button();
-  $("<button>").addClass("No").text("No, keep this skater.").appendTo(dialog).click(function() {
+  $("<button>").addClass("Yes").text("Yes, remove!").appendTo(dialog).click(function() {
+    skater.$sbRemove();
     dialog.dialog("destroy").remove();
   }).button();
 
   dialog.dialog({
     title: "Remove Skater",
     modal: true,
-    width: "500px",
-    buttons: { Close: function() { $(this).dialog("destroy").remove(); } }
+    width: "700px"
   });
 }
 
