--- a/html/controls/mobile.html
+++ b/html/controls/mobile.html
@@ -32,8 +32,9 @@
   </div>
 </div>
 
-<div data-role="page" data-add-back-btn="true" id="JamControlPage">
+<div data-role="page" id="JamControlPage">
   <div data-role="header">
+    <a href="mobile.html" data-direction="reverse" data-icon="arrow-l">Main</a>
     <h1>Jam Control</h1>
   </div>
 
@@ -52,8 +53,9 @@
 </div>
 </div>
 
-<div data-role="page" data-add-back-btn="true" id="PeriodTimePage">
+<div data-role="page" id="PeriodTimePage">
   <div data-role="header">
+    <a href="mobile.html" data-direction="reverse" data-icon="arrow-l">Main</a>
     <h1>Period Time</h1>
   </div>
 
@@ -70,31 +72,32 @@
   </div>
 </div>
 
-<div data-role="page" data-add-back-btn="true" id="TeamScorePage">
+<div data-role="page" id="TeamScorePage">
   <div data-role="header">
+    <a href="mobile.html" data-direction="reverse" data-icon="arrow-l">Main</a>
     <h1>Team Score</h1>
   </div>
 
   <div data-role="content">
     <div><a class="Team1 Name"></a></div>
     <div>
-      <button class="Team1 ScoreDown" data-inline="true" value="-1">-1 sec</button>
+      <button class="Team1 ScoreDown" data-inline="true" value="-1">-1</button>
       <a class="Team1 Score"></a>
-      <button class="Team1 ScoreUp" data-inline="true" value="1">+1 sec</button>
+      <button class="Team1 ScoreUp" data-inline="true" value="1">+1</button>
     </div>
     <div>
-      <input type="text" class="Team1 SetScore"/>
+      <input type="number" class="Team1 SetScore"/>
       <button class="Team1 SetScore" data-inline="true">Set Score</button>
     </div>
 
     <div><a class="Team2 Name"></a></div>
     <div>
-      <button class="Team2 ScoreDown" data-inline="true" value="-1">-1 sec</button>
+      <button class="Team2 ScoreDown" data-inline="true" value="-1">-1</button>
       <a class="Team2 Score"></a>
-      <button class="Team2 ScoreUp" data-inline="true" value="1">+1 sec</button>
+      <button class="Team2 ScoreUp" data-inline="true" value="1">+1</button>
     </div>
     <div>
-      <input type="text" class="Team2 SetScore"/>
+      <input type="number" class="Team2 SetScore"/>
       <button class="Team2 SetScore" data-inline="true">Set Score</button>
     </div>
   </div>
