update index.html with link to mobile.html page

--- a/html/index.html
+++ b/html/index.html
@@ -28,6 +28,7 @@ see <a href="guide.html">the guide</a>.
 <h3>Scoreboard view/control pages</h3>
 <a href="controls/operator.html">Main Operator Control Panel</a><br/>
 <a href="views/scoreboard.html">Main Scoreboard</a><br/>
+<a href="controls/mobile.html">Mobile Device Operator Controls</a><br/>
 <a href="controls/lineups.html">Team Lineup Control Panel</a><br/>
 <a href="views/archive/overlay.html">Video Feed Overlay Scoreboard (not updated yet, may not work)</a><br/>
 <a href="controls/media_management.html">Media Management</a><br/>
