--- a/html/controls/media_management.html
+++ b/html/controls/media_management.html
@@ -18,14 +18,12 @@
     <li><a href="#Images">Image</a></li>
     <li><a href="#Videos">Video</a></li>
     <li><a href="#CustomHtml">Custom Page</a></li>
+    <button class="Remove">Remove Type</button>
+    <button class="Add">Add Unavailable Media</button>
   </ul>
 </div>
 
 <div class="TabTemplate">
-  <div class="Buttons">
-    <button class="Remove">Remove all selected</button>
-    <button class="Add">Add</button>
-  </div>
   <div class="Type"></div>
 </div>
 
@@ -34,17 +32,20 @@
   <thead>
     <tr class="Type">
       <th colspan="4" class="Type">
+        <button class="Show">Show</button>
+        <button class="Hide">Hide</button>
         <a class="Type">
           <span class="Label">Type:</span>
           <span class="Type"></span>
         </a>
-        <button class="Show">Show</button>
-        <button class="Hide">Hide</button>
-        <button class="Add">Add</button>
+        <button class="ShowAvailable Available">Show Available</button>
+        <button class="HideAvailable AvailableControl Available">Hide Available</button>
+        <button class="RefreshAvailable AvailableControl Available">Refresh Available</button>
+        <button class="AddAllAvailable AvailableControl Available">Add All Available</button>
       </th>
     </tr>
     <tr class="Controls">
-      <th class="Remove"><input class="Remove" type="checkbox"/></th>
+      <th class="Remove"><button class="Remove">Remove All</button></th>
       <th class="Name">Name</th>
       <th class="Src">Source</th>
       <th class="Preview">
@@ -55,30 +56,60 @@
   </thead>
   <tbody>
     <tr class="ItemTemplate">
-      <td class="Remove"><input class="Remove" type="checkbox"/></td>
+      <td class="Remove"><button class="Remove">Remove</button></td>
       <td class="Name"><input class="Name" type="text"/></td>
       <td class="Src"><input class="Src" type="text"/></td>
+      <td class="Preview"><button class="Preview">Show Preview</button></td>
+    </tr>
+    <tr class="AvailableTemplate">
+      <td class="Add"><button class="Add">Add</button></td>
+      <td class="Name"><a class="Name"></a></td>
+      <td class="Src"><a class="Src"></a></td>
       <td class="Preview"><button class="Preview">Show Preview</button></td>
     </tr>
   </tbody>
 </table>
 
 <div class="AddSpecificDialogTemplate">
-  <a class="Type">Type:</a><input type="text" size="8" class="Type"/>
-  <a class="Name">Name:</a><input type="text" size="8" class="Name"/>
-  <a class="Src">Source:</a><input type="text" size="12" class="Src"/>
+  <p>
+    This should only be used to add an entry for media when the file does not exist yet;
+    this will only add the entry, it will not actually add a file.
+  </p>
+  <p>
+    To add a file that already exists in one of the type subdirectories, click on the
+    <i>Show Available</i> button in the corresponding Type section.
+  </p>
+  <br/>
+  <p>
+    <a class="Media">Media:</a>
+    <select class="Media">
+      <option class="Images" value="Image">Images</option>
+      <option class="Videos" value="Video">Videos</option>
+      <option class="CustomHtml" value="Html">CustomHtml</option>
+    </select>
+  </p>
+  <p><a class="Type">Type:</a><input type="text" size="8" class="Type"/></p>
+  <p><a class="Name">Name:</a><input type="text" size="8" class="Name"/></p>
+  <p><a class="Filename">Filename:</a><input type="text" size="12" class="Filename"/></p>
 </div>
 
-<div class="AddTypeDialogTemplate">
-  <button class="Refresh">Refresh List</button>
-  <table class="List">
-    <thead>
-      <tr><th>Add</th><th>Source</th></tr>
-    </thead>
-    <tbody>
-      <tr colspan=2 class="Status"><td></td></tr>
-    </tbody>
-  </table>
+<div class="RemoveTypeDialogTemplate">
+  <p>
+    This will remove the section for the specified Type.  It will also remove all
+    entries in that Type.  This does not actually remove any files nor the Type directory.
+    You should not normally need to remove any Type sections.  You also need to remove
+    the Type directory manually or the Type section will be recreated when the scoreboard
+    is restarted or reset.
+  </p>
+  <p>
+    <a class="Media">Media:</a>
+    <select class="Media">
+      <option class="Images" value="Image">Images</option>
+      <option class="Videos" value="Video">Videos</option>
+      <option class="CustomHtml" value="Html">CustomHtml</option>
+    </select>
+  </p>
+  <p><a class="Type">Type:</a><input type="text" size="8" class="Type"/></p>
 </div>
 
 </body>
