Update button creation minor bug, in media_management page add warning to rarely used dialogs in media_management page

--- a/html/controls/media_management.html
+++ b/html/controls/media_management.html
@@ -71,6 +71,7 @@
 </table>
 
 <div class="AddSpecificDialogTemplate">
+  <p><b>This is probably not what you want to do.</b></p>
   <p>
     This should only be used to add an entry for media when the file does not exist yet;
     this will only add the entry, it will not actually add a file.
@@ -94,6 +95,7 @@
 </div>
 
 <div class="RemoveTypeDialogTemplate">
+  <p><b>This is probably not what you want to do.</b></p>
   <p>
     This will remove the section for the specified Type.  It will also remove all
     entries in that Type.  This does not actually remove any files nor the Type directory.
